[tool.poetry]
name = "django-zarinpal"
version = "2.0.0"
description = "integrate django payments with zarrinpal"
authors = ["blueboy-tm <arshiaihammi@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
zeep = "^4.0.0"

[tool.poetry.dev-dependencies]
pycodestyle = "^2.6.0"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
